# my_project

.devcontainer/: devcontainer.json
energy-analysis/: .gitignore  AI_USAGE.md  README.md  pyproject.toml  requirements.txt
energy-analysis/config/: config.yaml
energy-analysis/dashboards/: app.py
energy-analysis/data/processed/: combined_weather_energy.csv  merged_2025-05-02_to_2025-07-31.csv  merged_2025-05-05_to_2025-08-03.csv  quality_report_20250721_222420.json
energy-analysis/data/raw/: energy_2025-07-06_to_2025-08-05.csv  energy_2025-07-21_to_2025-08-04.csv  energy_2025-07-28_to_2025-08-04.csv  weather_2025-05-06_to_2025-08-04.csv  weather_2025-07-05_to_2025-08-04.csv  weather_2025-07-06_to_2025-08-05.csv
energy-analysis/energy_weather_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
energy-analysis/logs/: analysis_report.txt
energy-analysis/src/: analysis.py  data_fetcher.py  data_processor.py  pipeline.py
energy-analysis/tests/: test_pipeline.py
